--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
         overflow-y: auto;
     }
      .offer-wall-container {
-        padding: 15px 10px;
-        margin: 10px 5px;
+        padding: 20px 5px;
+        margin: 15px 0;
         height: auto;
         max-height: none;
         overflow-y: visible;
@@ -661,9 +661,9 @@
             .modal-text {
                 font-size: 1rem;
             }
-            .offer-wall-container {
-                padding: 20px 15px;
-                margin: 15px;
+           .offer-wall-container {
+                padding: 25px 10px;
+                margin: 20px 5px;
                 height: auto;
                 max-height: none;
                 overflow-y: visible;
