--- a/index.html
+++ b/index.html
@@ -895,6 +895,7 @@
             text-align: center;
         }
     </style>
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6840b9467c84420012f17c23&product=sop' async='async'></script>
 </head>
 <body>
     <div class="background-animation">
