--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
     
     <div class="modal-overlay" id="modalOverlay">
         <div class="modal">
-            <button onclick="document.getElementById('modalOverlay').style.display='none'" class="close-btn">✕</button>
+            <button onclick=""document.getElementById('modalOverlay').classList.remove('show')">✕</button>
             <h2 class="modal-title">🎉 Movie Found!</h2>
             <p class="modal-text" id="modalText">Great news! Your movie is available for download.</p>
             <button class="download-btn" onclick="proceedToVerification()">Continue to Download</button>
@@ -1223,7 +1223,7 @@
         }
 
         // Show movie found modal
-        function showMovieFoundModal(movieTitle) {
+              function showMovieFoundModal(movieTitle) {
             document.getElementById('modalText').textContent = 
                 `"${movieTitle}" is available in HD quality. Click below to proceed with the download.`;
             document.getElementById('modalOverlay').classList.add('show');
